--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -2,29 +2,34 @@ project:
   type: website
   output-dir: ./docs
 website:
-  title: De Bello Gallico
   navbar:
-    left:
-    - href: index.qmd
-      text: Domus
-    - href: capitulum_1.qmd
-      text: Capitulum I
-    - href: capitulum_2.qmd
-      text: Capitulum II
-    - href: capitulum_3.qmd
-      text: Capitulum III
-    - href: capitulum_4.qmd
-      text: Capitulum IV
-    - href: capitulum_5.qmd
-      text: Capitulum V
-    - href: capitulum_6.qmd
-      text: Capitulum VI
-    - href: capitulum_7.qmd
-      text: Capitulum VII
-    - href: capitulum_8.qmd
-      text: Capitulum VIII
-    - href: capitulum_9.qmd
-      text: Capitulum IX
+    title: "De Bello Gallico"
+  sidebar:
+    style: "docked"
+    title: "Liber I"
+    contents:
+      - href: index.qmd
+        text: Domus
+      - href: capitulum_1.qmd
+        text: Capitulum I
+      - href: capitulum_2.qmd
+        text: Capitulum II
+      - href: capitulum_3.qmd
+        text: Capitulum III
+      - href: capitulum_4.qmd
+        text: Capitulum IV
+      - href: capitulum_5.qmd
+        text: Capitulum V
+      - href: capitulum_6.qmd
+        text: Capitulum VI
+      - href: capitulum_7.qmd
+        text: Capitulum VII
+      - href: capitulum_8.qmd
+        text: Capitulum VIII
+      - href: capitulum_9.qmd
+        text: Capitulum IX
+      - href: capitulum_10.qmd
+        text: Capitulum X
 format:
   html:
     theme: sandstone
