--- a/site/_quarto.yml
+++ b/site/_quarto.yml
@@ -29,3 +29,6 @@ format:
     toc: false
     css: include/webex.css
     include-after-body: include/webex.js
+  pdf:
+    toc: false
+format-links: [pdf]
